# LeviLaunchroid

./: .gitignore  .gitmodules  README.md  settings.gradle
.github/workflows/: android.yml
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: launcher.dex
app/src/main/cpp/: Android.mk  CMakeLists.txt
app/src/main/cpp/launcher-core/: main.cpp
app/src/main/cpp/levilauncher/: CMakeLists.txt
app/src/main/cpp/levilauncher/src/: main.cpp
app/src/main/cpp/levilauncher/src/gui/: ImGuiAnsiColor.h  renderer.cpp
app/src/main/cpp/levilauncher/src/logger/: logger.cpp  logger.h
app/src/main/cpp/leviutils/: CMakeLists.txt  xmake.lua
app/src/main/cpp/leviutils/src/: main.cpp
app/src/main/cpp/leviutils/src/gui/: ImGuiAnsiColor.cpp  renderer.cpp  renderer.h
app/src/main/cpp/leviutils/src/logger/: jni_logger.cpp
app/src/main/jni/: Android.mk  Application.mk  preloader.cpp  xmake.lua
app/src/main/jni/src-preloader/: preloader.cpp
app/src/main/res/drawable/: background_gradient.xml  bg_abi_arm64_v8a.xml  bg_abi_armeabi_v7a.xml  bg_abi_default.xml  bg_abi_x86.xml  bg_abi_x86_64.xml  bg_item_rounded.xml  bg_round_gradient.xml  bg_rounded_card.xml  count_background.xml  ic_add.xml  (+5 more)
fmod/: build.gradle.kts
gradle/: libs.versions.toml
httpclient/: build.gradle.kts
microsoft/xal/: build.gradle.kts
microsoft/xal/src/main/: AndroidManifest.xml
microsoft/xbox/: build.gradle.kts
minecraft/: build.gradle.kts
minecraft-msftauth/: build.gradle.kts
pairip/: build.gradle.kts
preloader/: .gitignore  build.gradle
(+148 files in other folders)
